--- a/style.css
+++ b/style.css
@@ -51,6 +51,22 @@ body {
   padding-inline: 2.4rem;
 }
 
+.wrapper::before {
+
+  content: '';
+  width: 100%;
+  height: 70px;
+
+
+  position: absolute;
+  top: -2px;
+  left: 0px;
+  z-index: -1;
+  background: #8ce1bb;
+
+
+}
+
 ul {
   list-style: none;
 }
