--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ body {
   padding-inline: 2.4rem;
 }
 
+/* New Changes
+
 .wrapper::before {
 
   content: '';
@@ -66,6 +68,8 @@ body {
 
 
 }
+*/
+
 
 ul {
   list-style: none;
